<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:text="@string/lblLatitude" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txtLatitudeLabel"></TextView>
        <TextView android:text="@string/blank" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txtLatitudeValue"></TextView>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:text="@string/lblLongitude" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txtLongitudeLabel"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txtLongitudeValue" android:text="@string/blank"></TextView>
    </TableRow>
    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow3">
        <TextView android:text="@string/description" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1"></TextView>
        <EditText android:id="@+id/edtDescription" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/blank" android:layout_weight="1"></EditText>
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtFoundSpecimen">
        <Button android:layout_width="wrap_content" android:id="@+id/btnFindSpecimen" android:layout_height="wrap_content" android:text="@string/lblFindSpecimen"></Button>
        <TextView android:layout_width="wrap_content" android:text="@string/blank" android:layout_height="wrap_content" android:id="@+id/textView2"></TextView>
    </TableRow>
    <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:id="@+id/btnSaveLocation" android:layout_height="wrap_content" android:text="@string/btnSaveLocation"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btnShowSpecimens" android:id="@+id/btnShowSpecimens"></Button>
    </TableRow>
</TableLayout>
